--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Portfolio/jvp.png" />
+    <link rel="icon" type="image/png" href="/Portfolio/assets/jvp-BY7rWC_K.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JIL VARGHESE PALLIYAN - Portfolio</title>
     <meta name="description" content="Computer Science Engineering student, Mentor at IVAEX, passionate about automation and software development." />
